MMA-7745 Fjern ubrukt kode og noe enkel rydding